feat(theme): polybar
Define theme/colors Catppuccin Macchiato for polybar.

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -16,14 +16,18 @@
 ;
 ;==========================================================
 
+[global/wm]
+include-file = $HOME/.config/polybar/themes/macchiato.ini
+
 [colors]
-background = #282A2E
-background-alt = #373B41
-foreground = #C5C8C6
-primary = #F0C674
-secondary = #8ABEB7
-alert = #A54242
-disabled = #707880
+background = ${colors.base} 
+background-alt = ${colors.mantle}
+foreground = ${colors.text}
+foreground-alt = ${colors.subtext0}
+primary = ${colors.mauve}
+secondary = ${colors.teal}
+alert = ${colors.red}
+disabled = ${colors.overlay0}
 
 [bar/bar1]
 width = 100%
@@ -45,7 +49,8 @@ padding-right = 1
 
 module-margin = 1
 
-separator = |
+;separator = |
+separator = •
 separator-foreground = ${colors.disabled}
 
 font-0 = monospace;2
@@ -70,11 +75,15 @@ tray-position = right
 type = internal/xworkspaces
 
 label-active = %name%
+label-active-foreground = ${colors.primary}
 label-active-background = ${colors.background-alt}
 label-active-underline= ${colors.primary}
 label-active-padding = 1
 
 label-occupied = %name%
+label-occupied-foreground = ${colors.foreground-alt}
+;label-occupied-overline = ${colors.foreground-alt}
+label-occupied-underline = ${colors.foreground-alt}
 label-occupied-padding = 1
 
 label-urgent = %name%
@@ -94,11 +103,18 @@ type = internal/fs
 interval = 25
 
 mount-0 = /
+;mount-1 = /home
 
-label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
+;label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
+label-mounted = %mountpoint%%{F-} %percentage_used%%
+format-mounted-foreground = ${colors.secondary}
+format-mounted = <label-mounted>
 
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
+
+;format-mounted-overline = #00FF00
+;format-mounted-underline = #FF0000
 
 [module/pulseaudio]
 type = internal/pulseaudio
@@ -124,12 +140,18 @@ label-indicator-margin = 1
 label-indicator-foreground = ${colors.background}
 label-indicator-background = ${colors.secondary}
 
+;format-overline = #00FF00
+;format-underline = #FF0000
+
 [module/memory]
 type = internal/memory
 interval = 2
 format-prefix = "RAM "
 format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
+
+;format-overline = #00FF00
+;format-underline = #FF0000
 
 [module/cpu]
 type = internal/cpu
@@ -138,6 +160,9 @@ format-prefix = "CPU "
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
 
+;format-overline = #00FF00
+;format-underline = #FF0000
+
 [network-base]
 type = internal/network
 interval = 5
@@ -145,15 +170,28 @@ format-connected = <label-connected>
 format-disconnected = <label-disconnected>
 label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
 
+;format-connected-overline = #0000FF
+;format-connected-underline = #00FF00
+
 [module/wlan]
 inherit = network-base
 interface-type = wireless
 label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
 
+;format-connected-overline = #0000FF
+;format-connected-underline = #0000FF
+
 [module/eth]
 inherit = network-base
 interface-type = wired
-label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
+
+;label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
+label-connected = %ifname%%{F-} %local_ip%
+
+format-connected-foreground = ${colors.secondary}
+
+;format-connected-overline = #0000FF
+;format-connected-underline = #FF0000
 
 [module/date]
 type = internal/date
@@ -165,8 +203,10 @@ date-alt = %Y-%m-%d %H:%M:%S
 label = %date%
 label-foreground = ${colors.primary}
 
+;format-overline = #00FF00
+;format-underline = #FF0000
+
 [settings]
 screenchange-reload = true
 pseudo-transparency = true
 
-; vim:ft=dosini
