feat(theme): btop, conky and polybar
Btop: Change color highlight shortcut.
Conky: Add more information details.
Polybar: Define new variables values.

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -77,21 +77,29 @@ type = internal/xworkspaces
 label-active = %name%
 label-active-foreground = ${colors.primary}
 label-active-background = ${colors.background-alt}
+;label-active-overline= ${colors.primary}
 label-active-underline= ${colors.primary}
 label-active-padding = 1
 
 label-occupied = %name%
 label-occupied-foreground = ${colors.foreground-alt}
+;label-occupied-background = ${colors.background-alt}
 ;label-occupied-overline = ${colors.foreground-alt}
 label-occupied-underline = ${colors.foreground-alt}
 label-occupied-padding = 1
 
 label-urgent = %name%
+label-urgent-foreground = ${colors.background}
 label-urgent-background = ${colors.alert}
+;label-urgent-overline = ${colors.alert}
+;label-urgent-underline = ${colors.alert}
 label-urgent-padding = 1
 
 label-empty = %name%
 label-empty-foreground = ${colors.disabled}
+;label-empty-background = ${colors.background}
+;label-empty-overline = ${colors.disabled}
+;label-empty-underline = ${colors.disabled}
 label-empty-padding = 1
 
 [module/xwindow]
@@ -134,6 +142,8 @@ blacklist-0 = num lock
 
 label-layout = %layout%
 label-layout-foreground = ${colors.primary}
+;label-layout-background = ${colors.background-alt}
+;label-layout-padding = 1
 
 label-indicator-padding = 2
 label-indicator-margin = 1
