--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -17,7 +17,8 @@
 ;==========================================================
 
 [global/wm]
-include-file = $HOME/.config/polybar/themes/macchiato.ini
+include-file = ./themes/macchiato.ini
+include-file = ./modules.ini
 
 [colors]
 background = ${colors.base} 
@@ -29,7 +30,7 @@ secondary = ${colors.teal}
 alert = ${colors.red}
 disabled = ${colors.overlay0}
 
-[bar/bar1]
+[bar/top]
 width = 100%
 height = 24pt
 radius = 6
@@ -71,152 +72,20 @@ tray-position = right
 
 ; override-redirect = true
 
-[module/xworkspaces]
-type = internal/xworkspaces
-
-label-active = %name%
-label-active-foreground = ${colors.primary}
-label-active-background = ${colors.background-alt}
-;label-active-overline= ${colors.primary}
-label-active-underline= ${colors.primary}
-label-active-padding = 1
-
-label-occupied = %name%
-label-occupied-foreground = ${colors.foreground-alt}
-;label-occupied-background = ${colors.background-alt}
-;label-occupied-overline = ${colors.foreground-alt}
-label-occupied-underline = ${colors.foreground-alt}
-label-occupied-padding = 1
-
-label-urgent = %name%
-label-urgent-foreground = ${colors.background}
-label-urgent-background = ${colors.alert}
-;label-urgent-overline = ${colors.alert}
-;label-urgent-underline = ${colors.alert}
-label-urgent-padding = 1
-
-label-empty = %name%
-label-empty-foreground = ${colors.disabled}
-;label-empty-background = ${colors.background}
-;label-empty-overline = ${colors.disabled}
-;label-empty-underline = ${colors.disabled}
-label-empty-padding = 1
-
-[module/xwindow]
-type = internal/xwindow
-label = %title:0:60:...%
-
-[module/filesystem]
-type = internal/fs
-interval = 25
-
-mount-0 = /
-;mount-1 = /home
-
-;label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
-label-mounted = %mountpoint%%{F-} %percentage_used%%
-format-mounted-foreground = ${colors.secondary}
-format-mounted = <label-mounted>
-
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.disabled}
-
-;format-mounted-overline = #00FF00
-;format-mounted-underline = #FF0000
-
-[module/pulseaudio]
-type = internal/pulseaudio
-
-format-volume-prefix = "VOL "
-format-volume-prefix-foreground = ${colors.primary}
-format-volume = <label-volume>
-
-label-volume = %percentage%%
-
-label-muted = muted
-label-muted-foreground = ${colors.disabled}
-
-[module/xkeyboard]
-type = internal/xkeyboard
-blacklist-0 = num lock
-
-label-layout = %layout%
-label-layout-foreground = ${colors.primary}
-;label-layout-background = ${colors.background-alt}
-;label-layout-padding = 1
-
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-foreground = ${colors.background}
-label-indicator-background = ${colors.secondary}
-
-;format-overline = #00FF00
-;format-underline = #FF0000
-
-[module/memory]
-type = internal/memory
-interval = 2
-format-prefix = "RAM "
-format-prefix-foreground = ${colors.primary}
-label = %percentage_used:2%%
-
-;format-overline = #00FF00
-;format-underline = #FF0000
-
-[module/cpu]
-type = internal/cpu
-interval = 2
-format-prefix = "CPU "
-format-prefix-foreground = ${colors.primary}
-label = %percentage:2%%
-
-;format-overline = #00FF00
-;format-underline = #FF0000
-
-[network-base]
-type = internal/network
-interval = 5
-format-connected = <label-connected>
-format-disconnected = <label-disconnected>
-label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
-
-;format-connected-overline = #0000FF
-;format-connected-underline = #00FF00
-
-[module/wlan]
-inherit = network-base
-interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
-
-;format-connected-overline = #0000FF
-;format-connected-underline = #0000FF
-
-[module/eth]
-inherit = network-base
-interface-type = wired
-
-;label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
-label-connected = %ifname%%{F-} %local_ip%
-
-format-connected-foreground = ${colors.secondary}
-
-;format-connected-overline = #0000FF
-;format-connected-underline = #FF0000
-
-[module/date]
-type = internal/date
-interval = 1
-
-date = %H:%M
-date-alt = %Y-%m-%d %H:%M:%S
-
-label = %date%
-label-foreground = ${colors.primary}
-
-;format-overline = #00FF00
-;format-underline = #FF0000
-
 [settings]
+; Reload when the screen configuration changes (XCB_RANDR_SCREEN_CHANGE_NOTIFY event)
 screenchange-reload = true
+
+; Enables pseudo-transparency for the bar
+; If set to true the bar can be transparent without a compositor.
 pseudo-transparency = true
 
+; Define fallback values used by all module formats
+;format-foreground = ${colors.foreground}
+;format-background = ${colors.background-alt}
+;format-overline = ${colors.background}
+;format-underline = ${colors.background}
+;format-spacing = 0
+;format-padding = 1
+;format-margin = 0
+;format-offset = 0
