feat(conky): add network traffic

--- a/.config/conky/macchiato.conf
+++ b/.config/conky/macchiato.conf
@@ -106,12 +106,11 @@ conky.config = {
 -- ]];
 
 conky.text = [[
-${alignc}${color0}${font2}${DESKTOP_SESSION}${font}
+${alignc}${offset 12}${color0}${font2}${time %R}${font}${offset 3}${voffset -18}${time %S}${voffset 18}
 ${voffset 6}${alignc}${color0}${font3}${time %b %d, %Y}${font}${color}
-${voffset 6}${alignc}${color0}${font}${time %R}Hs${color}
-${voffset 18}${color3}${font}Uptime${alignr}${uptime}${color}
-${voffset 14}${goto 12}${color5}CPU @ ${freq_g}GHz${goto 50}
-${goto 12}$cpu%${color1}${alignr}${color1}proc. ${color5}$running_processes ${color1}/ ${color5}$processes
+${voffset 18}${color3}${font}v${kernel}${alignr}${uptime}${color}
+${voffset 14}${goto 12}${color5}CPU @ ${freq_g}GHz${alignr}${cpu}%
+${goto 12}${color1}Proc Running${alignr}${color5}$running_processes ${color1}/ ${color5}$processes
 ${color2}${goto 12}${cpubar 8,254}
 ${voffset 5}${goto 12}$font${color1}${top name 1}$alignr$color${top cpu 1}%
 ${goto 12}${color1}${top name 2}$alignr$color${top cpu 2}%
@@ -125,10 +124,19 @@ ${goto 12}${color1}${top_mem name 3}$alignr$color${top_mem mem_res 3}
 ${voffset 14}${goto 12}${color5}Swap${goto 50}
 ${goto 12}$swap / $swapmax${alignr}$swapperc%
 ${color2}${goto 12}${swapbar 8,254}${color}
-${goto 12}${voffset 14}${color3}${font}File System 
-${goto 12}${color3}${fs_used /} / ${fs_size /}${alignr}${fs_used_perc /}%
+${goto 12}${voffset 14}${color5}${font}File System 
+${goto 12}${color5}${fs_used /} / ${fs_size /}${alignr}${fs_used_perc /}%
 ${goto 12}${color2}${fs_bar 8,254}
-${voffset 14}${goto 12}${color0}Ethernet${goto 50}
-${goto 12}${color1}Down: ${color5}${downspeed ens33}${alignr}${color1}Up: ${color7}${upspeed ens33}${color}
+${voffset 14}${goto 12}${color1}Local IP${alignr}${color}${addr ens33}${goto 50}
+${goto 12}${voffset 2}${color7}↓ ${totaldown ens33}${alignr}${offset -135}${if_match ${downspeedf ens33} > 0}${color1}@ ${color7}${downspeed ens33}${endif}
+${goto 12}${voffset -17}${offset 135}${color5}↑ ${totalup ens33}${alignr}${if_match ${upspeedf ens33} > 0}${color1}@ ${color5}${upspeed ens33}${endif}${voffset -2}
+${goto 12}${color2}${downspeedgraph ens33 50,125 ED8796 F5A97F 500000 -t}${alignr}${upspeedgraph ens33 50,125 A6DA95 91D7E3 50000 -t}
 ]];
 
+-- 3750
+-- ${goto 12}${color7}↓ ${downspeed ens33}${alignr}${color5}${upspeed ens33} ↑${color}
+-- ${goto 12}${color7}↓ ${downspeed ens33}${goto 90}${totaldown ens33}${goto 145}${color5}↑ ${upspeed ens33}${alignr}${color5}${totalup ens33}
+-- ${goto 12}${color7}${totaldown ens33}${alignr}${color5}${totalup ens33}${color}
+
+-- ${goto 12}${voffset 2}${color7}↓ ${downspeed ens33}${alignr}${offset -135}${totaldown ens33}
+-- ${goto 12}${voffset -17}${offset 135}${color5}↑ ${upspeed ens33}${alignr}${color5}${totalup ens33}${voffset -2}
