perf(conky): optimize config, style and commands
Define same config and style for conky's file.
Improve performance changing update_interval.
Improve time command usage in qclocktwo.conf

--- a/.config/conky/macchiato.conf
+++ b/.config/conky/macchiato.conf
@@ -83,6 +83,7 @@ conky.config = {
     color5 = '#a6da95',                         -- green
     color6 = '#f4dbd6',                         -- rosewater
     color7 = '#ee99a0',                         -- maroon
+    color8 = '#363a4f',                         -- surface 0
 };
 
 -- conky.text = [[
@@ -108,7 +109,8 @@ conky.config = {
 conky.text = [[
 ${alignc}${offset 12}${color0}${font2}${time %R}${font}${offset 3}${voffset -18}${time %S}${voffset 18}
 ${voffset 6}${alignc}${color0}${font3}${time %b %d, %Y}${font}${color}
-${voffset 18}${color3}${font}v${kernel}${alignr}${uptime}${color}
+${voffset 18}${color3}${font}${nodename}${color}
+${goto 12}${color3}${font}v${kernel}${alignr}${uptime}${color}
 ${voffset 14}${goto 12}${color5}CPU @ ${freq_g}GHz${alignr}${cpu}%
 ${goto 12}${color1}Proc Running${alignr}${color5}$running_processes ${color1}/ ${color5}$processes
 ${color2}${goto 12}${cpubar 8,254}
