--- a/.config/conky/qclocktwo.conf
+++ b/.config/conky/qclocktwo.conf
@@ -1,43 +1,131 @@
 conky.config = {
-    background=false,
-    own_window=true,
-    own_window_type="desktop",
-    own_window_class="Conky",
-    own_window_hints="undecorated,below,sticky,skip_taskbar,skip_pager",
-    alignment="top_left",
-    gap_x=560,
-    gap_y=260,
-    use_xft=true,
-    xftalpha=0.1,
-    update_interval=1,
-    uppercase=true,
-    double_buffer=true,
-    own_window_argb_visual=true,
-    own_window_argb_value=0,
-    draw_shades=true,
-    default_color="ffffff",
-    color1="2d2d2d"
-}
+
+    --Various settings
+    background = true,                          -- forked to background
+    cpu_avg_samples = 2,                        -- The number of samples to average for CPU monitoring.
+    diskio_avg_samples = 10,                    -- The number of samples to average for disk I/O monitoring.
+    double_buffer = true,                       -- Use the Xdbe extension? (eliminates flicker)
+    if_up_strictness = 'address',               -- how strict if testing interface is up - up, link or address
+    net_avg_samples = 2,                        -- The number of samples to average for net data
+    no_buffers = true,                          -- Subtract (file system) buffers from used memory?
+    temperature_unit = 'fahrenheit',            -- fahrenheit or celsius
+    text_buffer_size = 2048,                    -- size of buffer for display of content of large variables - default 256
+    update_interval = 10,                       -- update interval in seconds
+    imlib_cache_size = 0,                       -- disable image cache to get a new spotify cover per song
+
+    -- Placement (Conky on MIDDLE of THREE monitors at 1920x1080)
+    --alignment = 'top_left',                     -- top_left,top_middle,top_right,bottom_left,bottom_middle,bottom_right,
+    --gap_x = 3540,                               -- pixels between right or left border
+    --gap_y = 70,                                 -- pixels between bottom or left border
+
+    -- Placement (For SINGLE monitor users!)
+    alignment = 'top_right',                 -- top_left,top_middle,top_right,bottom_left,bottom_middle,bottom_right,
+    gap_x = 50,                                 -- pixels between right or left border
+    gap_y = 685,                                -- pixels between bottom or left border
+
+    -- Size
+    minimum_height = 200,                       -- minimum height of window
+    minimum_width = 260,                        -- minimum width of window
+    maximum_width = 260,                        -- maximum width of window
+
+    --Graphical
+    border_inner_margin = 5,                    -- margin between border and text
+    border_outer_margin = 5,                    -- margin between border and edge of window
+    border_width = 0,                           -- border width in pixels
+    default_bar_width = 260,                    -- default is 0 - full width
+    default_bar_height = 10,                    -- default is 6
+    default_gauge_height = 25,                  -- default is 25
+    default_gauge_width =40,                    -- default is 40
+    default_graph_height = 40,                  -- default is 25
+    default_graph_width = 153,                  -- default is 0 - full width
+    default_shade_color = '#000000',            -- default shading colour
+    default_outline_color = '#000000',          -- default outline colour
+    draw_borders = false,                       -- draw borders around text
+    draw_graph_borders = true,                  -- draw borders around graphs
+    draw_shades = false,                        -- draw shades
+    draw_outline = false,                       -- draw outline
+    stippled_borders = 0,                       -- dashing the border
+
+    --Textual
+    format_human_readable = true,               -- KiB, MiB rather then number of bytes
+    font  = 'JetBrains Mono:bold:size=14',      -- the default font used
+    font2 = 'Raleway:bold:size=30',             -- font for the time
+    font3 = 'Ubuntu:size=14',                   -- font for the date
+    font4 = 'Raleway:bold:size=9',              -- font for the keybindings heading
+    max_text_width = 0,                         -- 0 will make sure line does not get broken if width too smal
+    max_user_text = 16384,                      -- max text in conky default 16384
+    override_utf8_locale = true,                -- force UTF8 requires xft
+    short_units = true,                         -- shorten units from KiB to k
+    top_name_width = 21,                        -- width for $top name value default 15
+    top_name_verbose = false,                   -- If true, top name shows the full command line of  each  process - Default value is false.
+    uppercase = true,                           -- uppercase or not
+    use_spacer = 'none',                        -- adds spaces around certain objects to align - default none
+    use_xft = true,                             -- xft font - anti-aliased font
+    xftalpha = 1,                               -- alpha of the xft font - between 0-1
+
+    --Windows
+    own_window = true,                          -- create your own window to draw
+    own_window_argb_value = 255,                -- real transparency - composite manager required 0-255
+    own_window_argb_visual = true,              -- use ARGB - composite manager required
+    own_window_class = 'Conky',                 -- manually set the WM_CLASS name for use with xprop
+    own_window_colour = '#24273a',              -- color base. set colour if own_window_transparent no
+    own_window_transparent = false,             -- if own_window_argb_visual is true sets background opacity 0%
+    own_window_title = 'conky',                 -- set the name manually
+    own_window_type = 'override',               -- if own_window true options are: normal/override/dock/desktop/panel
+    own_window_hints = 'undecorated,below,above,sticky,skip_taskbar,skip_pager',  -- if own_window true - just hints - own_window_type sets it
+
+    --catppuccin
+    color0 = '#b7bdf8',                         -- lavender
+    color1 = '#cad3f5',                         -- text
+    color2 = '#8aadf4',                         -- blue
+    color3 = '#f0c6c6',                         -- flamingo
+    color4 = '#6e738d',                         -- overlay 0
+    color5 = '#a6da95',                         -- green
+    color6 = '#f4dbd6',                         -- rosewater
+    color7 = '#ee99a0',                         -- maroon
+    color8 = '#363a4f',                         -- surface 0
+};
+
+--conky.config = {
+--    background=false,
+--    own_window=true,
+--    own_window_type="desktop",
+--    own_window_class="Conky",
+--    own_window_hints="undecorated,below,sticky,skip_taskbar,skip_pager",
+--    alignment="top_left",
+--    gap_x=560,
+--    gap_y=260,        
+--    use_xft=true,
+--    xftalpha=0.1,
+--    update_interval=10,                      -- actualiza cada 10 segundos.
+--    uppercase=true,
+--    double_buffer=true,
+--    own_window_argb_visual=true,
+--    own_window_argb_value=0,
+--    draw_shades=true,
+--    default_color="ffffff",
+--    color1="2d2d2d"
+--}
 
 conky.text = [[
     
-${alignc}${color}I T ${color1}L ${color}I S ${color1}A S T I M E
-${alignc}${if_match ${exec date +"%M"} < 35}${if_match ${exec date +"%M"} >= 15}${if_match ${exec date +"%M"} < 20}${color}${endif}${endif}A ${color1}C ${if_match ${exec date +"%M"} >= 15}${if_match ${exec date +"%M"} < 20}${color}${endif}${endif}Q U A R T E R ${color1}D C
-${alignc}${if_match ${exec date +"%M"} >= 20}${if_match ${exec date +"%M"} < 30}${color}${endif}${endif}T W E N T Y ${if_match ${exec date +"%M"} >= 25}${if_match ${exec date +"%M"} < 30}${color}${endif}${else}${color1}${endif}${if_match ${exec date +"%M"} >= 5}${if_match ${exec date +"%M"} < 10}${color}${endif}${endif}F I V E ${color1}X
-${alignc}${if_match ${exec date +"%M"} >= 30}${if_match ${exec date +"%M"} < 35}${color}${endif}${endif}H A L F ${color1}B ${if_match ${exec date +"%M"} >= 10}${if_match ${exec date +"%M"} < 15}${color}${endif}${endif}T E N ${color1}F T O
-${alignc}${else}${if_match ${exec date +"%M"} >= 45}${if_match ${exec date +"%M"} < 50}${color}${endif}${endif}A ${color1}C ${if_match ${exec date +"%M"} >= 45}${if_match ${exec date +"%M"} < 50}${color}${endif}${endif}Q U A R T E R ${color1}D C
-${alignc}${if_match ${exec date +"%M"} >= 35}${if_match ${exec date +"%M"} < 45}${color}${endif}${endif}T W E N T Y ${if_match ${exec date +"%M"} < 40}${if_match ${exec date +"%M"} >= 35}${color}${endif}${else}${color1}${endif}${if_match ${exec date +"%M"} >= 55}${color}${endif}F I V E ${color1}X
-${alignc}H A L F B ${if_match ${exec date +"%M"} >= 50}${if_match ${exec date +"%M"} < 55}${color}${endif}${endif}T E N ${color1}F ${color}T O${color1}
-${alignc}${endif}${if_match ${exec date +"%M"} < 35}${if_match ${exec date +"%M"} >= 5}${color}${endif}${endif}P A S T ${color1}E R U ${if_match ${exec date +"%M"} < 35}${if_match ${exec date +"%I"} == 9}${color}${else}${color1}${endif}N I N E
-${alignc}${if_match ${exec date +"%I"} == 1}${color}${else}${color1}${endif}O N E ${if_match ${exec date +"%I"} == 6}${color}${else}${color1}${endif}S I X ${if_match ${exec date +"%I"} == 3}${color}${else}${color1}${endif}T H R E E
-${alignc}${if_match ${exec date +"%I"} == 4}${color}${else}${color1}${endif}F O U R ${if_match ${exec date +"%I"} == 5}${color}${else}${color1}${endif}F I V E ${if_match ${exec date +"%I"} == 2}${color}${else}${color1}${endif}T W O
-${alignc}${if_match ${exec date +"%I"} == 8}${color}${else}${color1}${endif}E I G H T ${if_match ${exec date +"%I"} == 11}${color}${else}${color1}${endif}E L E V E N
-${alignc}${if_match ${exec date +"%I"} == 7}${color}${else}${color1}${endif}S E V E N ${if_match ${exec date +"%I"} == 12}${color}${else}${color1}${endif}T W E L V E
-${alignc}${if_match ${exec date +"%I"} == 10}${color}${else}${color1}${endif}T E N ${else}${if_match ${exec date +"%I"} == 8}${color}${else}${color1}${endif}N I N E
-${alignc}${if_match ${exec date +"%I"} == 12}${color}${else}${color1}${endif}O N E ${if_match ${exec date +"%I"} == 5}${color}${else}${color1}${endif}S I X ${if_match ${exec date +"%I"} == 2}${color}${else}${color1}${endif}T H R E E
-${alignc}${if_match ${exec date +"%I"} == 3}${color}${else}${color1}${endif}F O U R ${if_match ${exec date +"%I"} == 4}${color}${else}${color1}${endif}F I V E ${if_match ${exec date +"%I"} == 1}${color}${else}${color1}${endif}T W O
-${alignc}${if_match ${exec date +"%I"} == 7}${color}${else}${color1}${endif}E I G H T${if_match ${exec date +"%I"} == 10}${color}${else}${color1}${endif} E L E V E N
-${alignc}${if_match ${exec date +"%I"} == 6}${color}${else}${color1}${endif}S E V E N${if_match ${exec date +"%I"} == 11}${color}${else}${color1}${endif} T W E L V E
-${alignc}${if_match ${exec date +"%I"} == 9}${color}${else}${color1}${endif}T E N ${endif}${color1}S E ${if_match ${exec date +"%M"} < 5}${color}${endif}O C L O C K
+${alignc}${color}I T ${color8}L ${color}I S ${color8}A S T I M E
+${alignc}${if_match ${time %M} < 35}${if_match ${time %M} >= 15}${if_match ${time %M} < 20}${color}${endif}${endif}A ${color8}C ${if_match ${time %M} >= 15}${if_match ${time %M} < 20}${color}${endif}${endif}Q U A R T E R ${color8}D C
+${alignc}${if_match ${time %M} >= 20}${if_match ${time %M} < 30}${color}${endif}${endif}T W E N T Y ${if_match ${time %M} >= 25}${if_match ${time %M} < 30}${color}${endif}${else}${color8}${endif}${if_match ${time %M} >= 5}${if_match ${time %M} < 10}${color}${endif}${endif}F I V E ${color8}X
+${alignc}${if_match ${time %M} >= 30}${if_match ${time %M} < 35}${color}${endif}${endif}H A L F ${color8}B ${if_match ${time %M} >= 10}${if_match ${time %M} < 15}${color}${endif}${endif}T E N ${color8}F T O
+${alignc}${else}${if_match ${time %M} >= 45}${if_match ${time %M} < 50}${color}${endif}${endif}A ${color8}C ${if_match ${time %M} >= 45}${if_match ${time %M} < 50}${color}${endif}${endif}Q U A R T E R ${color8}D C
+${alignc}${if_match ${time %M} >= 35}${if_match ${time %M} < 45}${color}${endif}${endif}T W E N T Y ${if_match ${time %M} < 40}${if_match ${time %M} >= 35}${color}${endif}${else}${color8}${endif}${if_match ${time %M} >= 55}${color}${endif}F I V E ${color8}X
+${alignc}H A L F B ${if_match ${time %M} >= 50}${if_match ${time %M} < 55}${color}${endif}${endif}T E N ${color8}F ${color}T O${color8}
+${alignc}${endif}${if_match ${time %M} < 35}${if_match ${time %M} >= 5}${color}${endif}${endif}P A S T ${color8}E R U ${if_match ${time %M} < 35}${if_match ${time %I} == 9}${color}${else}${color8}${endif}N I N E
+${alignc}${if_match ${time %I} == 1}${color}${else}${color8}${endif}O N E ${if_match ${time %I} == 6}${color}${else}${color8}${endif}S I X ${if_match ${time %I} == 3}${color}${else}${color8}${endif}T H R E E
+${alignc}${if_match ${time %I} == 4}${color}${else}${color8}${endif}F O U R ${if_match ${time %I} == 5}${color}${else}${color8}${endif}F I V E ${if_match ${time %I} == 2}${color}${else}${color8}${endif}T W O
+${alignc}${if_match ${time %I} == 8}${color}${else}${color8}${endif}E I G H T ${if_match ${time %I} == 11}${color}${else}${color8}${endif}E L E V E N
+${alignc}${if_match ${time %I} == 7}${color}${else}${color8}${endif}S E V E N ${if_match ${time %I} == 12}${color}${else}${color8}${endif}T W E L V E
+${alignc}${if_match ${time %I} == 10}${color}${else}${color8}${endif}T E N ${else}${if_match ${time %I} == 8}${color}${else}${color8}${endif}N I N E
+${alignc}${if_match ${time %I} == 12}${color}${else}${color8}${endif}O N E ${if_match ${time %I} == 5}${color}${else}${color8}${endif}S I X ${if_match ${time %I} == 2}${color}${else}${color8}${endif}T H R E E
+${alignc}${if_match ${time %I} == 3}${color}${else}${color8}${endif}F O U R ${if_match ${time %I} == 4}${color}${else}${color8}${endif}F I V E ${if_match ${time %I} == 1}${color}${else}${color8}${endif}T W O
+${alignc}${if_match ${time %I} == 7}${color}${else}${color8}${endif}E I G H T${if_match ${time %I} == 10}${color}${else}${color8}${endif} E L E V E N
+${alignc}${if_match ${time %I} == 6}${color}${else}${color8}${endif}S E V E N${if_match ${time %I} == 11}${color}${else}${color8}${endif} T W E L V E
+${alignc}${if_match ${time %I} == 9}${color}${else}${color8}${endif}T E N ${endif}${color8}S E ${if_match ${time %M} < 5}${color}${endif}O C L O C K
 
 ]]
