--- a/.config/conky/shortcuts.conf
+++ b/.config/conky/shortcuts.conf
@@ -11,96 +11,146 @@
 -- For more on Lua, see:
 -- https://www.lua.org/pil/contents.html
 
+
 conky.config = {
-    alignment = 'top_left',
-    background = false,
-    border_width = 1,
-    cpu_avg_samples = 2,
-    default_color = 'white',
-    default_outline_color = 'white',
-    default_shade_color = 'white',
-    double_buffer = true,
-    draw_borders = false,
-    draw_graph_borders = true,
-    draw_outline = false,
-    draw_shades = false,
-    extra_newline = false,
-    font = 'DejaVu Sans Mono:size=10',
-    gap_x = 60,
-    gap_y = 60,
-    minimum_height = 5,
-    minimum_width = 5,
-    net_avg_samples = 2,
-    no_buffers = true,
-    out_to_console = false,
-    out_to_ncurses = false,
-    out_to_stderr = false,
-    out_to_x = true,
 
+    --Various settings
+    background = true,                          -- forked to background
+    cpu_avg_samples = 2,                        -- The number of samples to average for CPU monitoring.
+    diskio_avg_samples = 10,                    -- The number of samples to average for disk I/O monitoring.
+    double_buffer = true,                       -- Use the Xdbe extension? (eliminates flicker)
+    if_up_strictness = 'address',               -- how strict if testing interface is up - up, link or address
+    net_avg_samples = 2,                        -- The number of samples to average for net data
+    no_buffers = true,                          -- Subtract (file system) buffers from used memory?
+    temperature_unit = 'fahrenheit',            -- fahrenheit or celsius
+    text_buffer_size = 2048,                    -- size of buffer for display of content of large variables - default 256
+    update_interval = 3600,                     -- update interval in seconds (3600 = 1 hour)
+    imlib_cache_size = 0,                       -- disable image cache to get a new spotify cover per song
 
---  own window tomado de archivo de arco linux bspwm
+    -- Placement (Conky on MIDDLE of THREE monitors at 1920x1080)
+    --alignment = 'top_left',                     -- top_left,top_middle,top_right,bottom_left,bottom_middle,bottom_right,
+    --gap_x = 3540,                               -- pixels between right or left border
+    --gap_y = 70,                                 -- pixels between bottom or left border
 
-        own_window = true,                                                      -- create your>
-        own_window_argb_value = 80,                                -- real transparency - com>
-        own_window_argb_visual = true,                          -- use ARGB - composite manage>
-        own_window_class = 'Conky',                                     -- manually set the WM>
-        own_window_colour = '#000000',                          -- set colour if own_window_tr>
-        own_window_hints = 'undecorated,below,above,sticky,skip_taskbar,skip_pager',  -- if ow>
-        own_window_transparent = false,                         -- if own_window_argb_visual i>
-        own_window_title = 'system_conky',                      -- set the name manually  - de>
-        own_window_type = 'desktop',                            -- if own_window true options >
+    -- Placement (For SINGLE monitor users!)
+    alignment = 'top_left',                    -- top_left,top_middle,top_right,bottom_left,bottom_middle,bottom_right,
+    gap_x = 50,                                 -- pixels between right or left border
+    gap_y = 70,                                 -- pixels between bottom or left border
 
+    -- Size
+    minimum_height = 200,                       -- minimum height of window
+    minimum_width = 260,                        -- minimum width of window
+    maximum_width = 400,                        -- maximum width of window
 
+    --Graphical
+    border_inner_margin = 5,                    -- margin between border and text
+    border_outer_margin = 5,                    -- margin between border and edge of window
+    border_width = 0,                           -- border width in pixels
+    default_bar_width = 260,                    -- default is 0 - full width
+    default_bar_height = 10,                    -- default is 6
+    default_gauge_height = 25,                  -- default is 25
+    default_gauge_width =40,                    -- default is 40
+    default_graph_height = 40,                  -- default is 25
+    default_graph_width = 153,                  -- default is 0 - full width
+    default_shade_color = '#000000',            -- default shading colour
+    default_outline_color = '#000000',          -- default outline colour
+    draw_borders = false,                       -- draw borders around text
+    draw_graph_borders = true,                  -- draw borders around graphs
+    draw_shades = false,                        -- draw shades
+    draw_outline = false,                       -- draw outline
+    stippled_borders = 0,                       -- dashing the border
 
+    --Textual
+    format_human_readable = true,               -- KiB, MiB rather then number of bytes
+    font  = 'JetBrains Mono:bold:size=10',      -- the default font used
+    font2 = 'Raleway:bold:size=30',             -- font for the time
+    font3 = 'Ubuntu:size=14',                   -- font for the date
+    font4 = 'Raleway:bold:size=9',              -- font for the keybindings heading
+    max_text_width = 0,                         -- 0 will make sure line does not get broken if width too smal
+    max_user_text = 16384,                      -- max text in conky default 16384
+    override_utf8_locale = true,                -- force UTF8 requires xft
+    short_units = true,                         -- shorten units from KiB to k
+    top_name_width = 21,                        -- width for $top name value default 15
+    top_name_verbose = false,                   -- If true, top name shows the full command line of  each  process - Default value is false.
+    uppercase = false,                          -- uppercase or not
+    use_spacer = 'none',                        -- adds spaces around certain objects to align - default none
+    use_xft = true,                             -- xft font - anti-aliased font
+    xftalpha = 1,                               -- alpha of the xft font - between 0-1
 
+    --Windows
+    own_window = true,                          -- create your own window to draw
+    own_window_argb_value = 255,                -- real transparency - composite manager required 0-255
+    own_window_argb_visual = true,              -- use ARGB - composite manager required
+    own_window_class = 'Conky',                 -- manually set the WM_CLASS name for use with xprop
+    own_window_colour = '#24273a',              -- color base. set colour if own_window_transparent no
+    own_window_transparent = false,             -- if own_window_argb_visual is true sets background opacity 0%
+    own_window_title = 'conky',                 -- set the name manually
+    own_window_type = 'override',               -- if own_window true options are: normal/override/dock/desktop/panel
+    own_window_hints = 'undecorated,below,above,sticky,skip_taskbar,skip_pager',  -- if own_window true - just hints - own_window_type sets it
 
-
-    show_graph_range = false,
-    show_graph_scale = false,
-    stippled_borders = 0,
-    update_interval = 1.0,
-    uppercase = false,
-    use_spacer = 'none',
-    use_xft = true,
-}
+    --catppuccin
+    color0 = '#b7bdf8',                         -- lavender
+    color1 = '#cad3f5',                         -- text
+    color2 = '#8aadf4',                         -- blue
+    color3 = '#f0c6c6',                         -- flamingo
+    color4 = '#6e738d',                         -- overlay 0
+    color5 = '#a6da95',                         -- green
+    color6 = '#f4dbd6',                         -- rosewater
+    color7 = '#ee99a0',                         -- maroon
+    color8 = '#363a4f',                         -- surface 0
+};
 
 conky.text = [[
-${color red}  ----  ATAJOS DE TECLADO BSPWM  ----
-$hr
-${color grey}Cerrar Ventana:$color Super + Shift + Q
-${color grey}Matar Ventana:$color Super + Ctrl + Q
-${color grey}Salir - Reiniciar - Apagar:$color Super + Shift + X
-${color grey}Menu Wlogout - Salir:$color Super + Alt + X
-$hr
-${color grey}Menú Rofi:$color Super + Alt + D
-${color grey}dmenu:$color Super + Espacio
-$hr
-${color grey}Reiniciar BSPWM:$color Super + Alt + R
-${color grey}Reiniciar SXHKD:$color Super + Escape
-$hr
-${color grey}Firefox: $color Super + Alt + W
-${color grey}Google Chrome: $color Super + Alt + G
-${color grey}Rep. Música Clementine: $color Super + Alt + M
-${color grey}OBS Studio: $color Super + Alt + O
-${color grey}Terminator: $color Super + Enter
-${color grey}Thunar: $color Super + Alt + F
-$hr
-${color grey}$color Estado de las Ventanas
-$hr
-${color grey}Layout Monocle o Tiled: $color Super + M
-${color grey}Layout Tiled: $color Super + T
-${color grey}Layout Seudo Tiled: $color Super + Shift + T
-${color grey}Layout Flotante: $color Super + S
-${color grey}Layout Full Screen: $color Super + F
-
-${color grey}Cambiar de Ventanas en Monocle
-${color grey}$color Super + C   y  Super + Shift + C
-
-${color grey}Enfocar Ventana Brother: $color Super + B
-${color grey}Enfocar Nodo Padre: $color Super + P
-
-${color grey}Listado de Ventanas abiertas:
-${color grey}$color Super + Alt + Tab
-
-
+${alignc}${font3}${color0}Shortcuts${font}
+${voffset 15}${color0}$hr${voffset 3}
+${alignc}${color0}General
+${color0}$hr${voffset 5}
+${color1}Close Win${alignr}${color5}Super + W
+${color1}Close All same Win${alignr}${color5}Super + Shift + W
+${color1}Change Desktop${alignr}${color5}Super + {1, 2, ...}
+${color1}Mover Win to Desktop${alignr}${color5}    Super + Shift + {1, 2, ...}
+${color0}$hr${voffset 5}
+${color1}dmenu${alignr}${color5}Super + Espacio
+${color1}Menú Rofi${alignr}${color5}Super + Alt + D
+${color0}$hr${voffset 5}
+${color1}Close Session${alignr}${color5}Super + Alt + Q
+${color1}Restart BSPWM${alignr}${color5}Super + Alt + R
+${color1}Restart SXHKD${alignr}${color5}Super + Escape
+${voffset 5}${color0}$hr${voffset 3}
+${alignc}${color0}Apps
+${color0}$hr${voffset 5}
+${color1}Terminal${alignr}${color5}Super + Enter
+${color1}Thunar${alignr}${color5}Super + Alt + E
+${color1}Firefox${alignr}${color5}Super + Alt + F
+${color1}Clementine${alignr}${color5}Super + Alt + M
+${color1}OBS Studio${alignr}${color5}Super + Alt + O
+${voffset 5}${color0}$hr${voffset 3}
+${alignc}${color0}Layouts
+${color0}$hr${voffset 5}
+${color1}Monocle o Tiled${alignr}${color5}Super + M
+${color1}Tiled${alignr}${color5}Super + T
+${color1}Pseudo Tiled${alignr}${color5}Super + Shift + T
+${color1}Full Screen${alignr}${color5}Super + F
+${color1}Floating${alignr}${color5}Super + S
+${voffset 5}${color0}$hr${voffset 3}
+${alignc}${color0}Focus
+${color0}$hr${voffset 5}
+${color1}Next Win${alignr}${color5}Super + C
+${color1}Previous Win${alignr}${color5}Super + Shift + C
+${color1}Win's Tree Right${alignr}${color5}Super + I
+${color1}Win's Tree Left${alignr}${color5}Super + O
+${color1}Win's Brother${alignr}${color5} Super + B
+${color1}Win's Parent${alignr}${color5} Super + P
+${color1}Show Opened Win${alignr}${color5}Super + Alt + Tab
+${voffset 5}${color0}$hr${voffset 3}
+${alignc}${color0}Location
+${color0}$hr${voffset 5}
+${color1}Swap with Bigger${alignr}${color5}Super + G
+${color1}Move Floating Win${alignr}${color5}Super + {←, ↓, ↑, →}
+${color1}Move Focus${alignr}${color5}Super + {H, J, K, L}
+${color1}Swap Win${alignr}${color5}Super + Shift + {H, J, K, L}
+${color1}Expand Win${alignr}${color5}Super + Alt + {H, J, K, L}
+${color1}Contract Win${alignr}${color5}Super + Alt + Shift + {H, J, K, L}
+${color1}Preselect Space${alignr}${color5}Super + Control + {H, J, K, L}
+${color1}Cancel Preselect Space${alignr}${color5}Super + Control + Space
 ]]
